# rlm-log-reader

./: .gitignore  CMakeLists.txt  Exceptions.h  LogData.cpp  LogData.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowConfig.h.in  README.html  README.md  Utilities.cpp  Utilities.h  cmake.py  conanfile.py  graphics.qrc  icon.rc  main.cpp
.github/workflows/: main.yml
Test/: CMakeLists.txt  IntegrationTests.cpp  TestConfig.h.in  UnitTests.cpp
Test/TestFiles/: TestFileFormatISV.txt  TestFileFormatInvalid.txt  TestFileFormatRLM.txt  TestFileFormatReport.txt
graphics/: icon.icns
